cubeideworkspace/.metadata/.plugins/org.eclipse.cdt.ui/RFBCON_L4.build.log
00:41:52 **** Incremental Build of configuration Debug for project RFBCON_L4 ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_FULL_LL_DRIVER -DUSE_HAL_DRIVER -DSTM32L431xx -c -I../Core/Inc -IC:/Users/penta/STM32Cube/Repository/STM32Cube_FW_L4_V1.17.2/Drivers/STM32L4xx_HAL_Driver/Inc -IC:/Users/penta/STM32Cube/Repository/STM32Cube_FW_L4_V1.17.2/Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -IC:/Users/penta/STM32Cube/Repository/STM32Cube_FW_L4_V1.17.2/Middlewares/Third_Party/FreeRTOS/Source/include -IC:/Users/penta/STM32Cube/Repository/STM32Cube_FW_L4_V1.17.2/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -IC:/Users/penta/STM32Cube/Repository/STM32Cube_FW_L4_V1.17.2/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -IC:/Users/penta/STM32Cube/Repository/STM32Cube_FW_L4_V1.17.2/Drivers/CMSIS/Device/ST/STM32L4xx/Include -IC:/Users/penta/STM32Cube/Repository/STM32Cube_FW_L4_V1.17.2/Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:77:2: warning: implicit declaration of function 'NVIC_PriorityGroupConfig'; did you mean 'NVIC_SetPriorityGrouping'? [-Wimplicit-function-declaration]
   77 |  NVIC_PriorityGroupConfig( NVIC_PriorityGroup_4 );
      |  ^~~~~~~~~~~~~~~~~~~~~~~~
      |  NVIC_SetPriorityGrouping
../Core/Src/main.c:77:28: error: 'NVIC_PriorityGroup_4' undeclared (first use in this function); did you mean 'NVIC_SetPriorityGrouping'?
   77 |  NVIC_PriorityGroupConfig( NVIC_PriorityGroup_4 );
      |                            ^~~~~~~~~~~~~~~~~~~~
      |                            NVIC_SetPriorityGrouping
../Core/Src/main.c:77:28: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:61: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

00:41:54 Build Failed. 2 errors, 1 warnings. (took 1s.797ms)

